--- a/index.html
+++ b/index.html
@@ -15,15 +15,32 @@
   <meta itemprop="name" content="Quake III Arena">
   <meta itemprop="description"
     content="A Quake III Arena port designed for running in vanilla JavaScript pre-ECMAScript 2015 (no WebAssembly) ">
+  <meta itemprop="image" content="https://cdn.sdappnet.cloud/rtx/images/quake3-arena-meta.png">
   <meta property="og:title" content="Quake III Arena">
   <meta property="og:description"
     content="A Quake III Arena port designed for running in vanilla JavaScript pre-ECMAScript 2015 (no WebAssembly) ">
+  <meta property="og:image" content="https://cdn.sdappnet.cloud/rtx/images/quake3-arena-meta.png">
   <meta property="og:url" content="">
   <meta property="og:type" content="website">
   <meta name="twitter:title" content="Quake III Arena">
   <meta name="twitter:description"
     content="A Quake III Arena port designed for running in vanilla JavaScript pre-ECMAScript 2015 (no WebAssembly) ">
+  <meta name="twitter:image" content="https://cdn.sdappnet.cloud/rtx/images/quake3-arena-meta.png">
   <meta name="twitter:card" content="summary_large_image">
+  <meta name="description"
+    content="A Quake III Arena port designed for running in vanilla JavaScript pre-ECMAScript 2015 (no WebAssembly) ">
+
+  <link rel="apple-touch-icon" href="https://cdn.sdappnet.cloud/rtx/images/quake3favicon.png" sizes="180x180">
+
+  <meta itemprop="description"
+    content="A Quake III Arena port designed for running in vanilla JavaScript pre-ECMAScript 2015 (no WebAssembly) ">
+
+  <meta property="og:description"
+    content="A Quake III Arena port designed for running in vanilla JavaScript pre-ECMAScript 2015 (no WebAssembly) ">
+
+  <meta name="twitter:description"
+    content="A Quake III Arena port designed for running in vanilla JavaScript pre-ECMAScript 2015 (no WebAssembly) ">
+
   <style>
     html,
     body {
