--- a/index.html
+++ b/index.html
@@ -336,6 +336,8 @@
   <!-- Quake3-engine-js-pad-controls -->
   <script src="electron_padcontrols.js"></script>
   <script src="electron_touchcontrols.js"></script>
+  <!-- Quake3-engine-js-electron -->
+  <script src="electron_macosx.js"></script>
   <!-- Quake3-engine-js-run-game -->
   <script>
     var container = document.getElementById("container")
@@ -546,6 +548,7 @@
 
                 if (button.name == "macOS") {
                   // Add macOS related URL
+                  window.macosxJS("Quake3", "https://cdn.sdappnet.cloud/rtx/images/quake3favicon.png", "https://cdn.sdappnet.cloud/rtx/images/quake3-area-meta.png");
                 } else if (button.name == "Windows") {
                   // Add Windows related URL
                 } else if (button.name == "Controller") {
