--- a/index.html
+++ b/index.html
@@ -319,6 +319,9 @@
         <button id="controller-btn" class="os-btn" style="background: transparent; border: none; padding: 0;">
           <img src="images/controller-js.png" alt="controller-js" style="width: 32px; height: 32px;">
         </button>
+        <button id="touchpad-btn" class="os-btn" style="background: transparent; border: none; padding: 0;">
+          <img src="images/touchpad.png" alt="touchpad-js" style="width: 32px; height: 32px;">
+        </button>
       </div>
       <div id="tech-buttons" style="display: none; position: fixed; bottom: 10px; right: 10px; z-index: 10000;">
         <button id="q3-btn" class="tech-btn"
@@ -535,6 +538,7 @@
             { id: 'macos-btn', name: 'macOS' },
             { id: 'windows-btn', name: 'Windows' },
             { id: 'controller-btn', name: 'Controller' },
+            { id: 'touchpad-btn', name: 'Touchpad' },
             { id: 'q3-btn', name: 'Quake3' },
             { id: 'js-btn', name: 'JavaScript' }
           ];
@@ -554,6 +558,8 @@
                   // Add Windows related URL
                   window.windowsJS("Quake3", "https://cdn.sdappnet.cloud/rtx/images/quake3favicon.png", "https://cdn.sdappnet.cloud/rtx/images/quake3-area-meta.png");
                 } else if (button.name == "Controller") {
+                  // Add Windows related URL
+                } else if (button.name == "Touchpad") {
                   // Add Windows related URL
                 } else if (button.name == "Quake3") {
                   url = 'https://github.com/inolen/quakejs';
